--- a/public/form.html
+++ b/public/form.html
@@ -3,30 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Contact Form</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form id="login-form">
-        <label for="access-key">Access Key:</label>
-        <input type="password" id="access-key" name="access-key" required>
-        <button type="submit">Login</button>
+    <h1>Contact Form</h1>
+    <form id="contact-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" required></textarea><br>
+        <button type="submit">Submit</button>
     </form>
     <script>
-        document.getElementById('login-form').addEventListener('submit', async (event) => {
+        if (!sessionStorage.getItem('accessKey')) {
+            window.location.href = '/';
+        }
+
+        document.getElementById('contact-form').addEventListener('submit', async (event) => {
             event.preventDefault();
-            const accessKey = document.getElementById('access-key').value;
-            const response = await fetch('/.netlify/functions/login', {
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            const message = document.getElementById('message').value;
+            const accessKey = sessionStorage.getItem('accessKey');
+            const response = await fetch('/.netlify/functions/submit', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ accessKey }),
+                body: JSON.stringify({ name, email, message, accessKey }),
             });
             const result = await response.json();
             if (result.success) {
-                sessionStorage.setItem('accessKey', accessKey);
-                window.location.href = '/form.html';
+                alert('Form submitted successfully');
             } else {
-                alert('Invalid Access Key');
+                alert('Submission failed');
             }
         });
     </script>
