--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <header class="hero">
         <div class="container">
             <h1>Roblox Securities Trading Exchange (RSTX)</h1>
-            <p>Your gateway to trading virtual stocks in the Roblox universe.</p>
+            <p>Your gateway to trading virtual stocks in Ridgeway.</p>
             <a href="#login" class="cta-button">Get Started</a>
         </div>
     </header>
@@ -18,12 +18,12 @@
         <section class="about" id="about">
             <div class="container">
                 <h2>About Us</h2>
-                <p>RSTX is a pioneering platform where Roblox enthusiasts can trade virtual stocks. Our mission is to provide a realistic stock trading experience within the Roblox ecosystem, allowing users to buy, sell, and manage virtual securities seamlessly.</p>
+                <p>RSTX is a pioneering platform where Ridgeway Citizens can trade virtual stocks. Our mission is to provide a realistic and safe stock trading experience within the Ro-State community, allowing users to buy, sell, and manage stocks seamlessly.</p>
             </div>
         </section>
         <section class="features" id="features">
             <div class="container">
-                <h2>Features</h2>
+                <h2>Features (made by chatgpt because I'm uninspired)</h2>
                 <div class="feature">
                     <h3>Real-time Trading</h3>
                     <p>Experience the thrill of real-time trading with our advanced trading engine, ensuring fast and reliable transactions.</p>
